fixed overflow x hidden on body tag

--- a/app/globals.css
+++ b/app/globals.css
@@ -20,5 +20,5 @@ body {
   display: flex;
   flex-direction: column;
   gap: 20px;
-  overflow: hidden;
+  overflow-x: hidden;
 }
